# osland

./: .gitignore  Cargo.toml  LICENSE  OSland教育价值分析报告.md  README.md  dbos_minimal_test.rs  mcp_minimal_test.rs  mcp_simple_test.rs  mcp_standalone_test.rs  parker_minimal_test.rs
dbos_tables_test/: Cargo.toml
dbos_tables_test/src/: main.rs
docs/: AGFS技术分析与OSland应用启示.md  CUDA_INTEGRATION.md  OSland 操作系统可视化编程IDE设计方案.md  OSland与Unit.land可视化编程环境对比分析.md  PROXMOX_DATACENTER_MANAGER_ANALYSIS.md  VISUAL_PROGRAMMING_ENHANCEMENT.md
examples/: cuda_tile_basic.rs  cuda_tile_demo.rs  dbos_tables_demo.rs  mcp_demo.rs  merge_sort_demo.rs  merge_sort_visualization.md  parker_multi_kernel_demo.rs  tile_engine_demo.rs  tile_os_design.rs  ui_framework_example.rs
extensions/: EXTENSION_DEVELOPMENT_GUIDE.md  README.md
extensions/browser/: manifest.json
extensions/intellij/: build.gradle.kts  settings.gradle.kts
extensions/qoder/: package.json
extensions/trae/: package.json
extensions/vscode/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
src/: main.rs
src/agfs_integration/: agfs_core.rs  command_interface.rs  file_operations.rs  mod.rs  resource_adapters.rs  search_engine.rs
src/ai_assistant/: code_generator.rs  error_diagnoser.rs  integration_interface.rs  mod.rs  model_manager.rs  performance_optimizer.rs
src/architecture_adapter/: architecture_service.rs  hardware_adapters.rs  kernel_adapters.rs  mod.rs  partitioned_kernel_adapter.rs
src/build_engine/: build_config.rs  (+3 more)
tests/: cuda_integration_test.rs  mcp_core_test.rs  tile_engine_test.rs
(+104 files in other folders)
